--- a/frontend/src/app/pages/userprofile/customerprofile/customerprofile.component.html
+++ b/frontend/src/app/pages/userprofile/customerprofile/customerprofile.component.html
@@ -26,11 +26,13 @@
             <a class="btn btn-primary btn-lg btn-round" routerLink="/userprofile/broadcast">Broadcast</a>
           </div>
           <div class="social-description">
-            <a href="#button" class="btn btn-primary btn-lg btn-round">Purchase History</a>
+            <a class="btn btn-primary btn-lg btn-round" routerLink="/userprofile/purchasehistory">Purchase
+              History</a>
           </div>
           <div class="social-description">
-            <a href="#button" class="btn btn-primary btn-lg btn-round">Bookmarks</a>
+            <a href="#button" class="btn btn-primary btn-lg btn-round" routerLink="/userprofile/bookmarks">Bookmarks</a>
           </div>
+
         </div>
       </div>
     </div>
@@ -47,7 +49,7 @@
             <div class="form-group form-inline">
               Search <input class="form-control ml-2" type="text" name="searchTerm">
             </div>
-            <table class="table table-striped">
+            <!-- <table class="table table-striped">
               <thead>
                 <tr>
                   <th scope="col">ID</th>
@@ -55,12 +57,14 @@
                   <th scope="col" sortable="message" (sort)="onSort($event)">Messages</th>
                   <th scope="col">Finalize</th>
                   <th scope="col">Remove</th>
+                  <th scope="col">Report</th>
+
                 </tr>
               </thead>
               <tbody>
-                <tr *ngFor="let x of current_user?.broadcasts.slice(0, 5)">
+                <tr *ngFor="let x of broadcastArray.broadcast.slice(0,5)">
                   <td>{{x._id | slice:-4}}</td>
-                  <td>{{x.name}}</td>
+                  <td>{{x.product}}</td>
                   <td scope="row">{{x.tags}}</td>
                   <td scope="row">
                     <div class="social-description">
@@ -73,9 +77,14 @@
                           class="now-ui-icons ui-1_simple-remove"></i></a>
                     </div>
                   </td>
+                  <td>
+                    <div class="social-description">
+                      <a class="btn btn-primary btn-lg btn-round btn-sm" routerLink="/pages/newcomplain">C</a>
+                    </div>
+                  </td>
                 </tr>
               </tbody>
-            </table>
+            </table> -->
 
             <div class="d-flex justify-content-between p-2">
 
@@ -147,7 +156,6 @@
             </div>
 
           </form>
-
         </div>
       </div>
     </div>
