--- a/frontend/src/app/pages/editprofile/editprofile.component.html
+++ b/frontend/src/app/pages/editprofile/editprofile.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="wrapper">
   <div class="page-header page-header-small" filter-color="orange">
     <!-- Profile Banner -->
