--- a/frontend/src/app/shared/navbar/navbar.component.html
+++ b/frontend/src/app/shared/navbar/navbar.component.html
@@ -23,6 +23,7 @@
                             <i class="now-ui-icons users_single-02"></i> Profile
                         </button>
                         <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+                            <button ngbDropdownItem routerLink="/userprofile/customerprofile">Profile</button>
                             <button ngbDropdownItem (click)="editprofile()">Edit Profile</button>
                             <button ngbDropdownItem>Settings</button>
                             <button ngbDropdownItem (click)="logout()">Sign Out</button>
