--- a/frontend/src/app/components/ratings/ratings.component.html
+++ b/frontend/src/app/components/ratings/ratings.component.html
@@ -1,41 +1,50 @@
-<div class="card-body col-xs-10 col-md-10">
-  <div class="row">
-    <div class="col-md-2">
-      <img src="https://image.ibb.co/jw55Ex/def_face.jpg" class="img img-rounded img-fluid">
-      <p class="text-secondary text-center">15 Minutes Ago</p>
-    </div>
-    <div class="col-md-10">
-      <div class="clearfix"></div>
-      <p>Lorem Ipsum is simply dummy text of the pr make but also the leap into electronic typesetting,
-        remaining
-        essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
-      </p>
-      <p>
-        <a class="float-right btn btn-outline-primary ml-2"> <i class="fa fa-reply"></i> Reply</a>
-      </p>
-    </div>
-  </div>
-  <div class="card card-inner">
-    <div class="card-body">
-      <div class="row">
-        <div class="col-md-2">
-          <img src="https://image.ibb.co/jw55Ex/def_face.jpg" class="img img-rounded img-fluid">
-          <p class="text-secondary text-center">15 Minutes Ago</p>
-        </div>
-        <div class="col-md-10">
-          <p><a href="https://maniruzzaman-akash.blogspot.com/p/contact.html"><strong>Maniruzzaman
-                Akash</strong></a>
-          </p>
-          <p>
-            Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including
-            versions
-            of Lorem Ipsum.</p>
-          <p>
-            <a class="float-right btn btn-outline-primary ml-2"> <i class="fa fa-reply"></i> Reply</a>
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
+<div *ngFor="let review of this.reviewlist| slice:1 ;let index= index  " >
+    <div class="card card-inner">
+        <div class="card-body">
+        <div class="card-body col-xs-10 col-md-10">  
+<div class="row">
+<div class="col-md-2">
+  <img src="https://image.ibb.co/jw55Ex/def_face.jpg" class="img img-rounded img-fluid">
+   <p class="text-secondary text-center">
+     {{datelist[index+1]}}
+  
+</div>
+
+<div class="col-md-10">
+  <div class="clearfix"></div>
+  
+  
+  {{index+1}} {{review}}<br>
+
+
+<a class="float-right btn btn-outline-primary ml-2" (click)="onLinkClicked()" > <i class="fa fa-reply"></i> Reply</a>
+  
+<textarea *ngIf="buttonClicked" name="{{textarea}}"rows="4" cols="50"[(ngModel)] = "str" ></textarea>
+<!-- <br>
+
+   <button (click)="addTextarea()">Add Textarea</button>
+<form>
+     
+        <textarea name="{{textarea}}"rows="4" cols="50"[(ngModel)] = "str" ></textarea>
+        
+</form> 
+  <br><br> -->
+</div>
+
 
 </div>
+</div>
+</div>
+</div>
+  <!-- <li *ngFor="let rating of Ratings"> {{rating[i].review}}</li><br><br> -->
+   <!-- {{this.review}}<br> -->
+  <!-- <p>
+    <a class="float-right btn btn-outline-primary ml-2"> <i class="fa fa-reply"></i> Reply</a>
+  </p> -->
+   <!-- wenas karanna -->
+  
+ 
+
+
+</div>
+ 
