--- a/frontend/src/app/components/ratings/ratings.component.html
+++ b/frontend/src/app/components/ratings/ratings.component.html
@@ -1,3 +1,4 @@
+<div class="col-md-12">
 <div *ngFor="let review of this.reviewlist| slice:1 ;let index= index  " >
     <div class="card card-inner">
         <div class="card-body">
@@ -31,7 +32,7 @@
   <br><br> -->
 </div>
 
-
+</div>
 </div>
 </div>
 </div>
