--- a/frontend/src/app/components/ratings/ratings.component.html
+++ b/frontend/src/app/components/ratings/ratings.component.html
@@ -37,7 +37,9 @@
      
      <div *ngFor="let time of this.timelist | slice:1;let i = index  " >
       <div *ngIf="index+1 == numlist[i+1]">
-          <div class="col-md-7"    >
+          <div class="row">
+              <div class="col-md-5"></div>
+              <div class="col-md-7" style="margin-left: 100 px"  >
         <div class="card card-inner">
           <div class="card-body">
           <div class="card-body col-xs-10 col-md-10">  
@@ -59,6 +61,7 @@
       </div>
           </div>
         </div>
+    </div>
     </div>
     </div> 
     </div>       
