--- a/frontend/src/app/pages/userprofile/sellerprofile/sellerprofile.component.html
+++ b/frontend/src/app/pages/userprofile/sellerprofile/sellerprofile.component.html
@@ -170,7 +170,9 @@
            
            <div *ngFor="let time of this.timelist | slice:1;let i = index  " >
             <div *ngIf="index+1 == numlist[i+1]">
-                <div class="col-md-7"    >
+              <div class="row">
+                <div class="col-md-5"></div>
+                <div class="col-md-7" style="margin-left: 100 px"  >
               <div class="card card-inner">
                 <div class="card-body">
                 <div class="card-body col-xs-10 col-md-10">  
@@ -193,6 +195,7 @@
                 </div>
               </div>
           </div>
+        </div>
           </div> 
           </div>       
                 
