--- a/frontend/src/app/components/selling/selling.component.html
+++ b/frontend/src/app/components/selling/selling.component.html
@@ -75,7 +75,7 @@
                 </div>
 
                 <div class="footer text-center">
-                  <a class="btn btn-primary btn-round btn-lg btn-block" (click)="getBroadcast()">Publish</a>
+                  <a class="btn btn-primary btn-round btn-lg btn-block" (click)="sendSelling()">Publish</a>
                 </div>
 
               </form>
