--- a/frontend/src/app/pages/userprofile/customerprofile/customerprofile.component.html
+++ b/frontend/src/app/pages/userprofile/customerprofile/customerprofile.component.html
@@ -6,9 +6,8 @@
       style="background-image: url('assets/img/bg5.jpg') ;">
     </div>
 
-
     <div class="container">
-      <div class="content-center mt-4">
+      <div class="content-center">
         <div class="mt-5">
           <!--Profile Image-->
           <div class="photo-container">
@@ -47,7 +46,7 @@
               <h3>Recent Broadcasts</h3>
             </div>
             <div class="ml-auto">
-              <a class="btn btn-sm btn-primary btn-lg btn-round" routerLink="/userprofile/admin">View More</a>
+              <a class="btn btn-sm btn-primary btn-lg btn-round" routerLink="/userprofile/broadcast">View More</a>
             </div>
           </div>
           <form>
