--- a/frontend/src/app/pages/userprofile/sellerprofile/sellerprofile.component.html
+++ b/frontend/src/app/pages/userprofile/sellerprofile/sellerprofile.component.html
@@ -8,18 +8,15 @@
 
     <div class="container">
       <div class="content-center">
-        <div>
-
+        <div class="mt-5">
           <!--Profile Image-->
           <div class="photo-container">
             <img _ngcontent-c6="" alt="Thumbnail Image" class="rounded-circle img-raised  w-25 p-3"
               src="assets/img/ryan.jpg">
           </div>
           <!--/Profile Image-->
-
           <h3 class="title">Seller</h3>
         </div>
-
         <div class="row justify-content-center">
           <div class="social-description">
             <a class="btn btn-primary btn-lg btn-round" routerLink="/userprofile/selling">Selling</a>
@@ -70,11 +67,61 @@
       <div class="row">
         <div class="col-md-3 col-sm-2">
           <div class="card text-center" style=" width: 70rem;">
-            <h3>Recent sales</h3>
             <div class="col-md-12">
-              <div class="row">
-              </div>
+              <!-- Broadcast Table -->
+              <div class="container">
+                <div class="row">
+                  <div class="col-md-12">
+                    <div class="container">
+                      <div class="row">
+                        <h3>Recent Sales</h3>
+                        <div class="ml-auto">
+                          <a class="btn btn-sm btn-primary btn-lg btn-round" routerLink="/userprofile/broadcast">View
+                            More</a>
+                        </div>
+                      </div>
+                    </div>
+                    <form>
+                      <table class="table table-striped">
+                        <thead>
+                          <tr>
+                            <th scope="col">Number</th>
+                            <th scope="col" sortable="name" (sort)="onSort($event)">Shop Name</th>
+                            <th scope="col" sortable="area" (sort)="onSort($event)">Product</th>
+                            <th scope="col" sortable="message" (sort)="onSort($event)">Messages</th>
+                            <th scope="col">Finalize</th>
+                            <th scope="col">Action</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <td scope="row">BC</td>
+                            <td scope="row">BC</td>
+                            <td scope="row">BC</td>
+                            <td scope="row">BC</td>
+                            <td scope="row">BC</td>
+                            <td scope="row">BC</td>
+                          </tr>
+                        </tbody>
+                      </table>
 
+                      <div class="d-flex justify-content-between p-2">
+
+
+                        <!-- <select class="custom-select" style="width: auto" name="pageSize"
+                                    [(ngModel)]="service.pageSize">
+                                    <option [ngValue]="2">2 items per page</option>
+                                    <option [ngValue]="4">4 items per page</option>
+                                    <option [ngValue]="6">6 items per page</option>
+                                </select> -->
+                      </div>
+
+                    </form>
+
+                  </div>
+                </div>
+              </div>
+              <!-- /Broadcast Table -->
             </div>
           </div>
         </div>
@@ -90,8 +137,7 @@
         <div class="col-md-12">
           <div class="row">
             <h3>Ratings and Reviews</h3>
-            <a _ngcontent-c2="" class="btn btn-simple btn-primary btn-round ml-lg-auto"
-              routerLink="/userprofile/RatingsComponent">View
+            <a class="btn btn-simple btn-primary btn-round ml-lg-auto" routerLink="/userprofile/RatingsComponent">View
               More</a>
           </div>
           <div class="col-xs-12 col-md-6">
@@ -229,63 +275,7 @@
 
 
 
-  <!-- Broadcast Table -->
-  <div class="section">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="container">
-            <div class="row">
-              <h3>Recent Sales</h3>
-              <a _ngcontent-c2="" class="btn btn-simple btn-primary btn-round ml-lg-auto" href="#/examples/profile">View
-                More</a>
-            </div>
-          </div>
-          <form>
-            <div class="form-group form-inline">
-              Search <input class="form-control ml-2" type="text" name="searchTerm">
-            </div>
-            <table class="table table-striped">
-              <thead>
-                <tr>
-                  <th scope="col">Number</th>
-                  <th scope="col" sortable="name" (sort)="onSort($event)">Shop Name</th>
-                  <th scope="col" sortable="area" (sort)="onSort($event)">Product</th>
-                  <th scope="col" sortable="message" (sort)="onSort($event)">Messages</th>
-                  <th scope="col">Finalize</th>
-                  <th scope="col">Action</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td scope="row">BC</td>
-                  <td scope="row">BC</td>
-                  <td scope="row">BC</td>
-                  <td scope="row">BC</td>
-                  <td scope="row">BC</td>
-                  <td scope="row">BC</td>
-                </tr>
-              </tbody>
-            </table>
 
-            <div class="d-flex justify-content-between p-2">
-
-
-              <!-- <select class="custom-select" style="width: auto" name="pageSize"
-                                    [(ngModel)]="service.pageSize">
-                                    <option [ngValue]="2">2 items per page</option>
-                                    <option [ngValue]="4">4 items per page</option>
-                                    <option [ngValue]="6">6 items per page</option>
-                                </select> -->
-            </div>
-
-          </form>
-
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- /Broadcast Table -->
 
 
 
